<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>natnet_ros2</name>
  <version>0.1.0</version>
  <description>
    NatNet ROS 2 wrapper for OptiTrack Motive motion capture integration.
    Receives NatNet UDP packets from external Motive PC and publishes
    pose data into the AirStack perception layer.
  </description>

  <maintainer email="airlab@cmu.edu">AirLab CMU</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>airstack_msgs</depend>

  <!-- Optional: MAVROS integration -->
  <exec_depend>mavros_msgs</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
