<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>natnet_ros2</name>
  <version>0.1.0</version>
  <description>
    NatNet ROS 2 wrapper for OptiTrack Motive motion capture integration.
    Receives NatNet data from external Motive PC via the official NatNet SDK
    and publishes pose data into the AirStack perception layer.
  </description>

  <maintainer email="airlab@cmu.edu">AirLab CMU</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ NatNet node -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Python vision_pose_converter node -->
  <depend>rclpy</depend>
  <depend>tf_transformations</depend>
  <depend>airstack_msgs</depend>

  <!-- Optional: MAVROS integration -->
  <exec_depend>mavros_msgs</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
