<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_point_cloud_filter</name>
  <version>0.1.0</version>
  <description>Near-range lidar noise filter: subscribes raw PointCloud2, drops points inside a sensor-frame sphere, publishes xyz float32 cloud.</description>
  <maintainer email="ajong@andrew.cmu.edu">AirLab CMU</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
