<package format="2">
  <name>rqt_behavior_tree_command</name>
  <version>1.0.2</version>
  <description>rqt_behavior_tree_command is a Python GUI template.</description>
  <maintainer email="jkeller2@andrew.cmu.edu">John Keller</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <author>John Keller</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
